force-app/main/default/objects/Lead/fields/Close_Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Close_Lost_Reasons__c</fullName>
    <label>Lost Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>