force-app/main/default/objects/Lead/fields/Customer_Email_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Hidden__c</fullName>
    <label>Customer Email Hidden</label>
    <type>Email</type>
</CustomField>