force-app/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
                <isActive>false</isActive>
                <label>Dealer</label>
            </value>
            <value>
                <fullName>Distributor</fullName>
                <isActive>false</isActive>
                <label>Distributor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>