force-app/main/default/objects/Lead/fields/Products_Intrested__c.field-meta.xml
<CustomField>
    <fullName>Products_Intrested__c</fullName>
    <label>Products Intrested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fibre</fullName>
            </value>
            <value>
                <fullName>Yarn</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>