force-app/main/default/objects/Lead/fields/Skype_Url__c.field-meta.xml
<CustomField>
    <fullName>Skype_Url__c</fullName>
    <label>Skype URL</label>
    <type>Url</type>
</CustomField>