force-app/main/default/objects/Lead/fields/Subcategory_Products__c.field-meta.xml
<CustomField>
    <fullName>Subcategory_Products__c</fullName>
    <label>Sub-Category Products</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Products_Intrested__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tow</fullName>
            </value>
            <value>
                <fullName>Tops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>