force-app/main/default/objects/Lead/validationRules/Address_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_is_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
OR(
ISBLANK( Street ), 
ISBLANK( PostalCode ), 
ISBLANK( City ), 
ISBLANK( Country )
)
)</errorConditionFormula>
    <errorMessage>Address is mandatory.</errorMessage>
</ValidationRule>