force-app/main/default/objects/Lead/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Mine</filterScope>
    <label>My Leads</label>
</ListView>