force-app/main/default/objects/Lead/listViews/All_Leads.listView-meta.xml
<ListView>
    <fullName>All_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>