force-app/main/default/objects/Lead/listViews/Hot_Leads.listView-meta.xml
<ListView>
    <fullName>Hot_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.COUNTRY_CODE</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RATING</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>Hot Leads</label>
</ListView>